compiler/tests/compiler/must_fail/t_03.rs
fn test() {
    var! {
        x : stack! (b64);
    }
    code! {
        x = 0;
    }
    var! {
        _y : stack! (b64);
    }
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
